<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_overlay_solid">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_dialog_round_background"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_guide_line"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintHeight_percent="0.7"
        >

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:divider="@color/gray"
            android:dividerHeight="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingVertical="20dp"
                android:stateListAnimator="@animator/btn_selector_pressed"
                android:text="@string/dialog_cancel"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:textSize="16sp"
                android:contentDescription="@string/cancel_settings"/>

            <TextView
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingVertical="20dp"
                android:stateListAnimator="@animator/btn_selector_pressed"
                android:text="@string/dialog_save"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:textSize="16sp"
                android:contentDescription="@string/save_settings"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>