<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_dialog_gradient_overlay_top"
    tools:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bottom_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bottom_lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/tv_btn_watch_video"
        style="@style/DialogTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_watch_video_background"
        android:padding="12dp"
        tools:text="@string/watch_video"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:textSize="20sp"
        android:stateListAnimator="@animator/btn_selector_pressed"
        app:layout_constraintWidth_percent="0.55"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_retry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/btn_retry"
        android:scaleType="fitCenter"
        android:src="@drawable/drawable_btn_retry"
        android:stateListAnimator="@animator/btn_selector_pressed"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_top"
        app:layout_constraintBottom_toTopOf="@+id/tv_try_again"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constrainedHeight="true"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_totems_counter"
        style="@style/DialogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_retry"
        app:layout_constraintLeft_toRightOf="@+id/btn_retry"
        app:layout_constraintRight_toRightOf="@+id/btn_retry"
        tools:text="x4"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_try_again"
        style="@style/DialogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="40sp" />

    <ImageView
        android:id="@+id/btn_level_selector"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/btn_red_level_selector"
        android:src="@drawable/drawable_btn_level_selector"
        android:stateListAnimator="@animator/btn_selector_pressed"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_bottom_lower"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spacer"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bottom_upper" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_bottom_lower"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@+id/btn_level_selector"
        app:layout_constraintRight_toLeftOf="@+id/btn_restart"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bottom_upper"
        app:layout_constraintWidth_percent="0.15" />

    <ImageView
        android:id="@+id/btn_restart"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/btn_red_restart"
        android:src="@drawable/drawable_btn_red_restart"
        android:stateListAnimator="@animator/btn_selector_pressed"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_bottom_lower"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@+id/spacer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bottom_upper" />

</androidx.constraintlayout.widget.ConstraintLayout>
