<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_dialog_gradient_overlay_top"
    tools:background="#000000">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_totems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_texts_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_texts_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />
    
        <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/iv_square"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/red_square_image_description"
        android:scaleType="fitCenter"
        android:src="@drawable/drawable_tiny_red_square"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_bonus_totems"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spacer"
        app:layout_constraintTop_toTopOf="@+id/tv_bonus_totems"
        app:layout_constraintVertical_weight="1"
        tools:visibility="visible" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/guide_line_totems"
        app:layout_constraintLeft_toRightOf="@+id/iv_square"
        app:layout_constraintRight_toLeftOf="@id/tv_plus"
        app:layout_constraintTop_toTopOf="@+id/guide_line_totems"
        app:layout_constraintWidth_percent="0.03" />

    <TextView
        android:id="@+id/tv_plus"
        style="@style/DialogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/guide_line_totems"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@+id/spacer"
        app:layout_constraintRight_toLeftOf="@id/tv_bonus_totems"
        app:layout_constraintTop_toTopOf="@+id/guide_line_totems"
        tools:textSize="45sp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_bonus_totems"
        style="@style/DialogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/guide_line_totems"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@+id/tv_plus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_line_totems"
        tools:text="3"
        tools:textSize="33sp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_message"
        style="@style/DialogTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_texts_top"
        app:layout_constraintBottom_toTopOf="@+id/tv_new_record_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="LEVEL 1\nCLEAR" />

    <TextView
        android:id="@+id/tv_new_record_message"
        style="@style/DialogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/new_record"
        android:text="@string/new_record"
        android:textColor="@color/new_record"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_current_record_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintVertical_chainStyle="spread"
        tools:textSize="35sp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_current_record_time"
        style="@style/DialogTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_last_record_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_record_message"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="⏱ 01:56"
        tools:textSize="35sp" />


    <TextView
        android:id="@+id/tv_last_record_time"
        style="@style/DialogTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_record_time"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_texts_bottom"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Record 02:34" />

    <ImageView
        android:id="@+id/btn_level_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/btn_red_next_level"
        android:scaleType="fitCenter"
        app:layout_constraintWidth_percent="0.17"
        android:src="@drawable/drawable_btn_level_selector"
        android:stateListAnimator="@animator/btn_selector_pressed"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@+id/guide_line_left"
        app:layout_constraintRight_toLeftOf="@+id/btn_next_level"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_buttons" />

    <ImageView
        android:id="@+id/btn_next_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/btn_red_next_level"
        android:scaleType="fitCenter"
        android:src="@drawable/drawable_btn_red_next"
        app:layout_constraintWidth_percent="0.17"
        android:stateListAnimator="@animator/btn_selector_pressed"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@+id/btn_level_selector"
        app:layout_constraintRight_toLeftOf="@+id/btn_restart"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_buttons" />


    <ImageView
        android:id="@+id/btn_restart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/btn_red_restart"
        android:scaleType="fitCenter"
        android:src="@drawable/drawable_btn_red_restart"
        android:stateListAnimator="@animator/btn_selector_pressed"
        app:layout_constraintWidth_percent="0.17"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@+id/btn_next_level"
        app:layout_constraintRight_toLeftOf="@+id/guide_line_right"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_buttons" />

    <View
        android:id="@+id/area_bonus_totems_last_record_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/tv_new_record_message"
        app:layout_constraintRight_toRightOf="@+id/tv_new_record_message"
        app:layout_constraintTop_toTopOf="@+id/tv_message"
        app:layout_constraintBottom_toBottomOf="@id/tv_current_record_time"
        />

    <View
        android:id="@+id/area_tile_bonus_totems_num"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/iv_square"
        app:layout_constraintRight_toRightOf="@+id/tv_bonus_totems"
        app:layout_constraintTop_toTopOf="@+id/iv_square"
        app:layout_constraintBottom_toBottomOf="@id/iv_square"
        />

</androidx.constraintlayout.widget.ConstraintLayout>